@@ -1,0 +1,9 @@
+# -*- coding: utf-8  -*-
+#
+# Copyright (C) 2011-2018 Ben Kurtovic <ben.kurtovic@gmail.com>
+# Released under the terms of the MIT License. See LICENSE for details.
+
+from .script import run
+
+if __name__ == "__main__":
+    run()
